feat: Implement Notification and Toast Contexts for real-time notifications and user feedback
- Added NotificationContext to manage server-sent events (SSE) for real-time notifications.
- Integrated toast notifications using ToastContext for user feedback on actions.
- Created hooks for local storage management and auto-refresh functionality.
- Developed API client for unified API requests with error handling.
- Implemented Firebase authentication and Firestore integration for user management.
- Added utility functions for image processing and validation.
- Defined TypeScript interfaces for cart, customer, product, and user data structures.
- Created custom error page for better user experience on error states.

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,9 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# Firebase service account keys (CRITICAL - Never commit these!)
+*-firebase-adminsdk*.json
+al-sabil-ordeing-app-firebase-adminsdk.json
+config/firebase-admin-key.json
+config/*firebase*key*.json
