--- a/package.json
+++ b/package.json
@@ -6,22 +6,41 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "create-admin": "tsx scripts/createAdmin.ts",
+    "create-admin:custom": "tsx scripts/createAdmin.ts"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.7",
+    "@types/jspdf": "^1.3.3",
+    "@types/puppeteer": "^5.4.7",
+    "date-fns": "^4.1.0",
+    "dotenv": "^17.2.1",
+    "firebase": "^12.1.0",
+    "firebase-admin": "^13.4.0",
+    "html2canvas": "^1.4.1",
+    "jose": "^6.0.13",
+    "jspdf": "^3.0.1",
+    "next": "15.3.5",
+    "puppeteer": "^24.17.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.3.5"
+    "react-icons": "^5.5.0",
+    "recharts": "^3.1.2"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4.1.11",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.3.5",
-    "@eslint/eslintrc": "^3"
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.11",
+    "ts-node": "^10.9.2",
+    "tsx": "^4.20.4",
+    "typescript": "^5"
   }
 }
