--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,6 @@ next-env.d.ts
 
 # Firebase service account keys (CRITICAL - Never commit these!)
 *-firebase-adminsdk*.json
-al-sabil-ordeing-app-firebase-adminsdk.json
+*firebase*key*.json
 config/firebase-admin-key.json
-config/*firebase*key*.json
+config/*firebase*
